<resources>
    <string name="app_name">Geo Task</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_search_task">Search Tasks</string>
    <string name="dialog_fragment_title">Remove Task</string>
    <string name="dialog_fragment_positive_button_label">REMOVE</string>
    <string name="dialog_fragment_negative_button_label">CANCEL</string>
    <string name="title_activity_list_item_detail">ListItemDetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task_detail">TaskDetail</string>
    <string name="detail_view_expirationDate_label">Expiration Date</string>
    <string name="detail_view_range_label">Range</string>
    <string name="detail_view_item_label">Items</string>
    <string name="detail_view_location_label">Locations</string>
    <string name="detail_view_item_list_notesButton_label">Notes</string>
    <string name="action_bar_task_detail_edit">Edit</string>
    <string name="action_bar_task_detail_delete">Delete</string>
    <string name="detail_view_repeat_label">Repeat</string>

</resources>
