
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mobile.av.geotask.ListItemDetailFragment"
    android:id="@+id/temp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_view_expirationDate_label"
        android:id="@+id/detail_view_expirationDate_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/detail_view_expirationDate_textView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/detail_view_expirationDate_label"
        android:layout_toEndOf="@+id/detail_view_expirationDate_label"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_view_range_label"
        android:id="@+id/detail_view_range_label"
        android:layout_below="@+id/detail_view_expirationDate_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/detail_view_range_textView"
        android:layout_above="@+id/detail_view_repeat_label"
        android:layout_alignLeft="@+id/detail_view_expirationDate_textView"
        android:layout_alignStart="@+id/detail_view_expirationDate_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_view_repeat_label"
        android:id="@+id/detail_view_repeat_label"
        android:layout_below="@+id/detail_view_range_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/detail_view_repeat_textView"
        android:layout_alignTop="@+id/detail_view_repeat_label"
        android:layout_alignLeft="@+id/detail_view_range_textView"
        android:layout_alignStart="@+id/detail_view_range_textView" />



    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:id="@+id/detail_view_item_above_separator"
        android:layout_below="@+id/detail_view_item_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_view_item_label"
        android:id="@+id/detail_view_item_label"
        android:layout_below="@+id/detail_view_item_below_separator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/detail_view_repeat_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/detail_view_item_below_separator"
        android:layout_marginTop="10dp" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_view_item_listView"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_below="@+id/detail_view_item_above_separator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:layout_below="@+id/detail_view_item_listView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/detail_view_location_above_separator"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detail_view_location_label"
        android:id="@+id/detail_view_location_label"
        android:layout_below="@+id/detail_view_location_above_separator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark"
        android:id="@+id/detail_view_location_below_separator"
        android:layout_below="@+id/detail_view_location_label"
        android:layout_alignLeft="@+id/detail_view_location_label"
        android:layout_alignStart="@+id/detail_view_location_label" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_view_location_listView"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_below="@+id/detail_view_location_below_separator"
        android:layout_alignLeft="@+id/detail_view_location_below_separator"
        android:layout_alignStart="@+id/detail_view_location_below_separator" />

</RelativeLayout>
